# ocadays2023-odoo-project-demo

./: .dockerignore  Dockerfile  README.md  docker-compose.devcontainer.yml  docker-compose.yml  gitaggregate.yaml  pyproject.toml  requirements-build.txt  requirements.txt  requirements.txt.in
.devcontainer/: devcontainer.json
odoo/addons/demo_all/: __manifest__.py
odoo/addons/my_custom_addon/: __init__.py  __manifest__.py
